# Non-StaticPenrose

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  grlensing_config.yaml
conan/: conanfile.txt  toolchain-gcc-11-release  toolchain-gcc-12-release
configs/: grlensing_config.yaml  grlensing_testing_config.yaml  isotropic_schw_trajectory.yaml  kerr_schild_kerr_breakup.yaml  kerr_schild_kerr_trajectory.yaml  penrose_breakup.yaml  sks_breakup.yaml  sks_breakup_2.yaml  sks_trajectory.yaml  trajectory.yaml
configs/kerr/: kerr_schild_kerr_breakup.yaml  kerr_schild_kerr_trajectory.yaml
configs/sks/: sks_breakup_M2_0.yaml  sks_breakup_M2_000.yaml  sks_breakup_M2_001.yaml  sks_breakup_M2_002.yaml  sks_breakup_M2_003.yaml  sks_breakup_M2_004.yaml  sks_breakup_M2_005.yaml  sks_breakup_M2_006.yaml  sks_breakup_M2_007.yaml  sks_breakup_M2_008.yaml  sks_breakup_M2_009.yaml  sks_breakup_M2_010.yaml  sks_breakup_M2_011.yaml  sks_breakup_M2_012.yaml  sks_breakup_M2_013.yaml  sks_breakup_M2_014.yaml  sks_breakup_M2_015.yaml  sks_breakup_M2_016.yaml  sks_breakup_M2_017.yaml  sks_breakup_M2_018.yaml  sks_breakup_M2_019.yaml  sks_breakup_M2_020.yaml  sks_breakup_M2_021.yaml  sks_breakup_M2_022.yaml  sks_breakup_M2_023.yaml  sks_breakup_M2_024.yaml  sks_breakup_M2_025.yaml  sks_breakup_M2_026.yaml  sks_breakup_M2_027.yaml  sks_breakup_M2_028.yaml  sks_breakup_M2_029.yaml  sks_breakup_M2_030.yaml  sks_breakup_M2_031.yaml  sks_breakup_M2_032.yaml  sks_breakup_M2_033.yaml  sks_breakup_M2_034.yaml  sks_breakup_M2_035.yaml  sks_breakup_M2_036.yaml  sks_breakup_M2_037.yaml  sks_breakup_M2_038.yaml  (+42 more)
include/: api_macros.hpp  cli.hpp  kernel.hpp  log.hpp  metric_server.hpp  mpi_index_map_3D.hpp  mpi_utilities.hpp  mpimatrix.hpp  options.hpp  options_in.txt  plugin.hpp  shared_library.hpp  storage_server.hpp  tensor_types.hpp  time_integration.hpp
plugins/archive_readers/: CMakeLists.txt
plugins/archive_readers/zip/: CMakeLists.txt
plugins/archive_readers/zip/include/: api_macros.hpp  options.hpp  options_in.txt
plugins/archive_readers/zip/source/: zip_reader.cpp
plugins/archive_writers/: CMakeLists.txt
plugins/archive_writers/ascii/: CMakeLists.txt
plugins/archive_writers/ascii/include/: api_macros.hpp  ascii_writer.hpp  options.hpp  options_in.txt
plugins/archive_writers/ascii/source/: ascii_writer.cpp
plugins/metrics/: CMakeLists.txt
plugins/metrics/KerrSchild_Kerr/: CMakeLists.txt
plugins/metrics/KerrSchild_Kerr/include/: KerrSchild_Kerr.hpp  api_macros.hpp  aux_functions.hpp  options.hpp  options_in.txt
plugins/metrics/KerrSchild_Kerr/source/: KerrSchild_Kerr.cpp  aux_functions.cpp  christoffel.cpp  grad_lapse.cpp  grad_ushift.cpp  l_shift.cpp  lapse.cpp  ll_extrinsic.cpp  metric.cpp  u_shift.cpp  ul_extrinsic.cpp
plugins/metrics/SKS/: CMakeLists.txt
plugins/metrics/SKS/include/: SKS.hpp  api_macros.hpp  aux_functions.hpp  options.hpp
plugins/metrics/SKS/source/: SKS.cpp  T.cpp  X.cpp  Y.cpp  Z.cpp  d2sx_dt2.cpp  d2sy_dt2.cpp  dT_dt.cpp  dT_dx.cpp  dT_dy.cpp  dT_dz.cpp  dX_dt.cpp  dX_dx.cpp  dX_dy.cpp  dX_dz.cpp  dY_dt.cpp  dY_dx.cpp  dY_dy.cpp  dY_dz.cpp  dZ_dt.cpp  dZ_dx.cpp  dZ_dy.cpp  dZ_dz.cpp  dg00_dt.cpp  dg00_dx.cpp  dg00_dy.cpp  dg00_dz.cpp  dg01_dt.cpp  dg01_dx.cpp  dg01_dy.cpp  dg01_dz.cpp  dg02_dt.cpp  dg02_dx.cpp  dg02_dy.cpp  dg02_dz.cpp  dg03_dt.cpp  dg03_dx.cpp  dg03_dy.cpp  dg03_dz.cpp  dg11_dt.cpp  (+47 more)
plugins/metrics/isotropic_Schwarzschild/: CMakeLists.txt
plugins/metrics/isotropic_Schwarzschild/include/: api_macros.hpp  isotropic_Schwarzschild.hpp  options.hpp  options_in.txt
plugins/metrics/isotropic_Schwarzschild/source/: isotropic_Schwarzschild.cpp
resources/: Kerr_solutions.nb  Schwarzschild_solutions.nb  adm_compute.m  batch_run.py  batch_run.sh  data_plotter.py  diff_to_conserved.py  equations.nb  generate.py  get_deps.sh  kerr_temp.nb  plot_energy.py  plot_trajectory.py  sks.cpp  sks.nb  solutions.nb  to_grid.py
resources/jupyter_notebooks/: grad_lapse_plots.ipynb  grad_ushift_plots.ipynb  lapse_plots.ipynb  llk_plots.ipynb  lshift_plots.ipynb  metric_plots.ipynb  shift_plots.ipynb  ushift_plots.ipynb  uumetric_plots.ipynb
resources/mathematica_notebooks/: KS_initial_data.nb  Kerr_solutions.nb  SKS_initial_data.nb  adm_compute.m  adm_decompose_SKS.m  equations.nb  sks.nb  sks_2.nb  sks_codegen.nb  sks_ergo_plot.nb  sks_generate.nb  sks_mathematica.nb  sks_view.nb
resources/python_scripts/: data_plotter.py  generate.py  plot_kerr_breakup.py  to_grid.py
results/: M2_variation_sumary.txt  d_variation_sumary.txt  summarize_M2_variation.py  summarize_d_variation.py
results/kerr_analougue_breakup/: eff.txt  kerr_schild_kerr_breakup.yaml  trajectory_1.ascii  trajectory_1_metadata.ascii  trajectory_2.ascii  trajectory_2_metadata.ascii  trajectory_3.ascii  trajectory_3_metadata.ascii
results/sks_breakup_M2_0/: sks_breakup_M2_0.yaml  stdout.txt  trajectory_1.ascii  trajectory_2.ascii  trajectory_3_metadata.ascii
results/sks_breakup_M2_000/: sks_breakup_M2_000.yaml  stdout.txt  trajectory_1_metadata.ascii  trajectory_2_metadata.ascii  trajectory_3.ascii
results/sks_breakup_M2_001/: sks_breakup_M2_001.yaml  stdout.txt  trajectory_1.ascii  trajectory_1_metadata.ascii  trajectory_2.ascii  trajectory_2_metadata.ascii  trajectory_3.ascii  trajectory_3_metadata.ascii
results/sks_breakup_M2_002/: sks_breakup_M2_002.yaml  stdout.txt  trajectory_1.ascii  trajectory_1_metadata.ascii  trajectory_2.ascii  trajectory_2_metadata.ascii  trajectory_3.ascii  (+1 more)
source/: adm_geodesic_callbacks.cpp  adm_geodesic_equations.cpp  adm_geodesic_four_momentum.cpp  adm_geodesic_global_energy.cpp  adm_geodesic_integrate.cpp  adm_geodesic_jacobian.cpp  cli_dump_metric.cpp  cli_integrate_trajectory.cpp  cli_list_plugins.cpp  cli_load_plugins.cpp  cli_penrose_breakup.cpp  kernel.cpp  main.cpp  metric_server.cpp  plugin.cpp  shared_library.cpp  storage_server.cpp
test/: CMakeLists.txt  kerr_schild_kerr_test_data.cpp  kerr_schild_kerr_test_data.hpp  kerr_schild_kerr_tests.cpp  kerr_schild_kerr_tests.hpp  test_constants.hpp  tests.cpp
(+709 files in other folders)
